provider/kubernetes/fixtures/divergingIngressDefinitions_ingresses.yml
apiVersion: v1
kind: Ingress
metadata:
  namespace: testing
spec:
  rules:
  - host: host-a
    http:
      paths:
      - backend:
          serviceName: service1
          servicePort: "80"

---
apiVersion: v1
kind: Ingress
metadata:
  namespace: testing
spec:
  rules:
  - host: host-a
    http:
      paths:
      - backend:
          serviceName: missing
          servicePort: "80"
